[package]
name = "flexcord"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
json = "0.12.4"
serde_json = "1.0.89"
chrono = "0.4.23"
futures-util = "0.3.25"
reqwest = { version = "0.11.12", features = ["json"] }
crossbeam-channel = "0.5.6"
tokio = { version = "1.22.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["api-all"] }
tokio-tungstenite = {version = "0.18.0", features = ["native-tls"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
